--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/ratik/wtMoney#readme",
   "dependencies": {
-    "wtTraffic": "git+https://github.com/ratik/wtTraffic.git",
-    "wttraffic": "git+https://github.com/ratik/wtTraffic.git"
+    "wt-traffic": "git+https://github.com/ratik/wtTraffic.git",
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
