--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/ratik/wtMoney#readme",
   "dependencies": {
-    "wt-traffic": "git+https://github.com/ratik/wtTraffic.git",
+    "wt-traffic": "git+https://github.com/ratik/wtTraffic.git"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
